--- a/Tugas BMI.ipynb
+++ b/Tugas BMI.ipynb
@@ -40,7 +40,7 @@
     "    print(\"Severely underweight\")\n",
     "elif BMI>=16 and BMI<18.5:\n",
     "    print(\"Underweight\")\n",
-    "elif BMI>=18.5 and BMI<=25:\n",
+    "elif BMI>=18.5 and BMI<25:\n",
     "    print(\"Normal (Healthy weight)\")\n",
     "elif BMI>=25 and BMI<30:\n",
     "    print(\"Overweight\")\n",
