--- a/Tugas BMI.ipynb
+++ b/Tugas BMI.ipynb
@@ -56,7 +56,7 @@
     "print (\"DETAILS :\")\n",
     "print (\"BMI value: \" , BMI)\n",
     "print (\"Weight: \", weight_kg, \"kg\")\n",
-    "print (\"Height: \", height_cm, \"cm2\")"
+    "print (\"Height: \", height_cm, \"cm\")"
    ]
   },
   {
